--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                                 Привет, <span id="auth-user-name"></span>!
                             </div>
                             <div id="referral-info" class="referral-code-display">
-                                Код: <span id="auth-referral-code" style="font-weight: bold;"></span>
-                                <span id="auth-user-discount" style="font-size: 0.8em; margin-left: 5px;">Скидка: 0%</span>
+                                Код: <span id="auth-referral-code"></span>
+                                <br><span id="auth-user-discount" style="font-size: 0.8em; margin-left: 5px;">Скидка: 0%</span>
                             </div>
                         </li>
                         <li class="li-logout-btn">
