news rules of registration added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             </div>
                             <div id="referral-info" class="referral-code-display">
                                 Код: <span id="auth-referral-code"></span>
-                                <br><span id="auth-user-discount" style="font-size: 0.8em; margin-left: 5px;">Скидка: 0%</span>
+                                <br><span id="auth-user-discount">Скидка: 0%</span>
                             </div>
                         </li>
                         <li class="li-logout-btn">
