all solutions were found - support messages have been changed

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                     <ul class="list-auth-authenticated" style="display: none;">
                         <li class="li-user-info">
                             <div id="user-greeting">
-                                Привет, <span id="auth-user-name"></span>!
+                                Hi, <span id="auth-user-name"></span>!
                             </div>
                             <div id="referral-info" class="referral-code-display">
-                                Код: <span id="auth-referral-code"></span>
-                                <br><span id="auth-user-discount">Скидка: 0%</span>
+                                Code: <span id="auth-referral-code"></span>
+                                <br><span id="auth-user-discount">Discount: 0%</span>
                             </div>
                         </li>
                         <li class="li-logout-btn">
