all solutions were found - name -> username

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="popup-content-registration">
             <h2>Регистрация</h2>
             <form id="form-registration">
-                <input type="text" id="reg-name" placeholder="Имя" required> 
+                <input type="text" id="reg-name" placeholder="Логин" required> 
                 <input type="email" id="reg-email" placeholder="Email" required>
                 <input type="password" id="reg-password" placeholder="Пароль" required>
                 <input type="text" id="reg-referral-code" placeholder="Реферальный код (необязательно)">
@@ -74,7 +74,7 @@
         <div class="popup-content-registration">
             <h2>Вход</h2>
             <form id="form-login">
-                <input type="text" id="login-name" placeholder="Имя" required>
+                <input type="text" id="login-name" placeholder="Логин" required>
                 <input type="password" id="login-password" placeholder="Пароль" required>
 
                 <button type="submit">Войти</button>
